--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,3 +11,18 @@ dependencies = [
     "PyYAML",
     "uc-micro-py",
 ]
+
+[project.optional-dependencies]
+dev = ["ruff"]
+
+[project.scripts]
+ssg = "ssg:main"
+
+[build-system]
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
+
+[tool.ruff]
+
+[tool.ruff.lint]
+select = ["E", "F"]
