--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "mdurl",
     "PyYAML",
     "uc-micro-py",
+    "typer",
 ]
 
 [project.optional-dependencies]
@@ -23,6 +24,8 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [tool.ruff]
+exclude = ["build"]
+
 
 [tool.ruff.lint]
 select = ["E", "F"]
