ci: fix error on release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,7 @@ jobs:
         uses: astral-sh/setup-uv@v1
 
       - name: Install build tools
-        run: uv pip install build
+        run: uv venv && uv pip install build
 
       - name: Build package
         run: uv run python -m build
