--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ dev = ["ruff"]
 ssg = "ssg:main"
 
 [build-system]
-requires = ["setuptools>=61.0", "setuptools_scm[toml]>=8.0"]
+requires = ["setuptools>=80", "setuptools_scm[simple]>=8.0"]
 build-backend = "setuptools.build_meta"
 
 [tool.ruff]
