Add Config dataclass, default ssg.yaml, tests, and update CI to run tests via uv

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,6 +1,9 @@
 name: Tests
 
-on: [pull_request]
+on:
+  push:
+    branches: [ main ]
+  pull_request:
 
 jobs:
   lint-and-format:
@@ -18,7 +21,10 @@ jobs:
         uses: astral-sh/setup-uv@v1
 
       - name: Create environment and install dependencies
-        run: uv venv && uv pip sync requirements-dev.lock
+        run: |
+          uv venv --python 3.12
+          uv pip sync requirements.lock
+          uv pip sync requirements-dev.lock
 
       - name: Check formatting
         run: uv run ruff format . --check
