add ruff extension and settings
Signed-off-by: Scott Wysocki <swysocki@gmail.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,4 +5,11 @@
             "scheme": "file"
         }
     ]
+    ,
+    "[python]": {
+        "editor.defaultFormatter": "charliermarsh.ruff",
+        "editor.formatOnSave": true
+    },
+    "python.formatting.provider": "ruff",
+    "ruff.args": ["--fix"]
 }
