--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,5 @@
         "editor.defaultFormatter": "charliermarsh.ruff",
         "editor.formatOnSave": true
     },
-    "python.formatting.provider": "ruff",
-    "ruff.args": ["--fix"]
+    "python.formatting.provider": "ruff"
 }
