fix the project page generation
The project page link was being added to the index, which was unwanted.
Added a test for it as well.

Signed-off-by: Scott Wysocki <swysocki@gmail.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,10 @@
         "editor.defaultFormatter": "charliermarsh.ruff",
         "editor.formatOnSave": true
     },
-    "python.formatting.provider": "ruff"
+    "python.formatting.provider": "ruff",
+    "python.testing.pytestArgs": [
+        "."
+    ],
+    "python.testing.unittestEnabled": false,
+    "python.testing.pytestEnabled": true
 }
